# YTSongDownloader

./: CMakeLists.txt  README.md  org.kde.ytsongdownloader.desktop  org.kde.ytsongdownloader.json  org.kde.ytsongdownloader.metainfo.xml  ytsongdownloader.kdev4
.kdev4/: ytsongdownloader.kdev4
android/: AndroidManifest.xml
src/: CMakeLists.txt  app.cpp  app.h  main.cpp  ytsongdownloaderconfig.kcfgc
src/contents/ui/: About.qml  main.qml
